--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
 	<main>
 		<h2>INSTRUCTIONS</h2>
 		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-
+<!--
 		<div>
 			<img src="images/back.png" alt="Queen of Diaminds">
 			<img src="images/back.png" alt="Queen of Hearts">
 			<img src="images/back.png" alt="King of Diamond">
 			<img src="images/back.png" alt="King of Hearts">
 		</div>
+-->		
+		<div id="game-board" class="board clearfix"></div>
+		<div class="resetButton">
+	  	<input type="button" onclick="gameReset()" value="Reset">
+	  	</div>
+
 	</main>
 	<footer class="clearfix">
 		<p class="copyright">Copyright 2017</p>
@@ -33,6 +39,8 @@
   <!-- Copy the below line -->
   <script src="js/main.js"></script>
   <!-- Place it right before the closing body tag -->
+
+
 
 </body>
 </html>
